--- a/Orbita-challenge-backend/Orbita-challenge-backend-API/Orbita-challenge-backend-API.csproj
+++ b/Orbita-challenge-backend/Orbita-challenge-backend-API/Orbita-challenge-backend-API.csproj
@@ -6,6 +6,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="MediatR" Version="11.0.0" />
+		<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.10">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -14,11 +16,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\Orbita-challenge-backend-Application\Orbita-challenge-backend-Application.csproj" />
 	  <ProjectReference Include="..\Orbita-challenge-backend-Infra\Orbita-challenge-backend-Infra.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Controllers\" />
 	</ItemGroup>
 
 </Project>
